--- a/hw1.css
+++ b/hw1.css
@@ -37,7 +37,7 @@ html {
 	padding-top: 0px;
 	padding-left: 150px;
 	padding-right: 150px;
-	padding-bottom: 320px;
+	padding-bottom: 120px;
 	width: 22%;
 	text-align:center;
 	margin-right: 0px;
@@ -47,6 +47,22 @@ html {
 	position: relative;
 	float: left;
 }
+
+#article {
+	background: #D3D3D3;
+    text-align: left;
+    width: 90%;
+    height: 100px;
+    float: left;
+    display: inline;
+    position: static;
+    color: darkgrey;
+    text-align: center;
+    margin-right: 15px;
+    margin-left: 15px; 
+    margin-top: 100px;
+ }
+
 #contactme {
 	background-color: #D3D3D3;
 	padding-top: 0px;
